--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Tribute Page</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-  <h1>Hello World</h1>
- <h1>just testing</h1>
-  
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<body>
+  <div id="main">
 
-    <script  src="js/index.js"></script>
-  </body>
+    <div id="title" type='text'>
+      <h2>DR. Albert Einstein</h2>
+    </div>
+    <div id="img-div">
+      <figcaption id="img-caption">This is albert </figcaption>
+      <img id="image"
+        src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg">
+    </div>
+    <div id="tribute-info">
+      <h4>A tribute to Albert Einstein</h4>
+      <ul>
+      <li>1914 - Born in Cresco, Iowa</li>
+      <li>1933 - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
+      <li>1935 - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."</li>
+      <li>1937 - Finishes university and takes a job in the US Forestry Service</li>
+      <li>1938 - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.</li>
+      <li>1941 - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.</li>
+      <li>1942 - Receives a Ph.D. in Genetics and Plant Pathology</li>
+    
+      </ul>
+    </div>
+    <a id="tribute-link" href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank"></a>
+
+  </div>
+
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+  <script src="js/index.js"></script>
+</body>
+
 </html>
