--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Tribute Page</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -12,14 +13,16 @@
 
     <div id="title" type='text'>
       <h2>DR. Albert Einstein</h2>
+      <p>The great scientist who helped in saving the world</p>
     </div>
     <div id="img-div">
-      <figcaption id="img-caption">This is albert </figcaption>
+      
       <img id="image"
         src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg">
-    </div>
+        <figcaption id="img-caption">Albert Einstein in 1920 after winning a Nobel Price </figcaption>
+      </div>
     <div id="tribute-info">
-      <h4>A tribute to Albert Einstein</h4>
+      <h4>Here's a time line of DR. ALBERT EINSTEIN</h4>
       <ul>
       <li>1914 - Born in Cresco, Iowa</li>
       <li>1933 - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
@@ -31,7 +34,8 @@
     
       </ul>
     </div>
-    <a id="tribute-link" href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank"></a>
+    <p>if you have time, you should read more about this incredible human being on his 
+      <a id="tribute-link" href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank">wikipedia entry.</a></p>
 
   </div>
 
